tests/suite/snapshots/suite__parse__tests__parse__block02_2.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/block02_2.xi:3:4]
   │
 3 │   x:int
   ·    ┬  
   ·    ╰── Unexpected token
───╯

